--- a/src/Pages/Zap/style.css
+++ b/src/Pages/Zap/style.css
@@ -1,8 +1,8 @@
-header{
+.top{
     width: 100%;
     height: 155px;
-
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
@@ -13,6 +13,6 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    margin-bottom: 100px;
     gap: 27px;
 }
