--- a/src/Pages/Zap/Question/style.css
+++ b/src/Pages/Zap/Question/style.css
@@ -11,7 +11,6 @@
     padding: 14px;
 
     font-size: 21px;
-   
 }
 
 .question h2{
@@ -39,4 +38,51 @@
     position: absolute;
     bottom: 5px;
     right: 5px;
+}
+
+.optionsContainer{
+    display: flex;
+    font-family: 'Recursive';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    gap: 7px;
+
+    color: #FFFFFF;
+
+}
+
+.errorOption{
+    width: 85.17px;
+    height: 37.17px;
+    background: #FF3030;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.almostErrorOption{
+    width: 85.17px;
+    height: 37.17px;
+    background: #FF922E;
+    border-radius: 5px;
+}
+
+.rightOption{
+    width: 85.17px;
+    height: 37.17px;
+    background: #2FBE34;
+    border-radius: 5px;
+}
+
+.res{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    gap: 28px;
 }
