--- a/src/Pages/Zap/ZapCount/style.css
+++ b/src/Pages/Zap/ZapCount/style.css
@@ -7,6 +7,15 @@
     justify-content: center;
     align-items: center;
 
+
     background-color: #FFFFFF;
     box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
+}
+
+.counter h2{
+    font-family: 'Recursive';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
 }
